[tool.poetry]
name = "tool_kit"
version = "0.2.0"
description = "generally useful components"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sentry-sdk = "^1.5.4"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
sshtunnel = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
